--- a/configuration.yaml
+++ b/configuration.yaml
@@ -25,7 +25,9 @@ http:
   # Secrets are defined in the file secrets.yaml
   api_password: !secret http_password
   # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
-  # base_url: example.duckdns.org:8123
+  base_url: https://priebe-home.duckdns.org:8123
+  ssl_certificate: /home/homeassistant/.homeassistant/certificate.pem
+  ssl_key: /home/homeassistant/.homeassistant/privkey.pem
 
 # Checks for available updates
 # Note: This component will send some information about your system to
