--- a/packages/automation.yaml
+++ b/packages/automation.yaml
@@ -60,3 +60,48 @@ automation:
       service: frontend.set_theme
       data:
         name: default
+
+
+  - id: night_porch_on
+    alias: 'Turn the porch light on at night'
+    trigger:
+      - platform: sun
+        event: sunset
+    action:
+      - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
+      - service: switch.turn_on
+        entity_id: switch.front_porch_switch
+
+  - id: night_porch_off
+    alias: 'Turn the porch light off at night'
+    trigger:
+      - platform: time
+        at: '23:30:00'
+    action:
+      - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
+      - service: switch.turn_off
+        entity_id: switch.front_porch_switch
+
+  - id: morning_porch_on
+    alias: 'Turn the porch light on in the morning'
+    trigger:
+      - platform: time
+        at: '05:45:00'
+    condition:
+      - condition: state
+        entity_id: sun.sun
+        state: 'below_horizon'
+    action:
+      - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
+      - service: switch.turn_on
+        entity_id: switch.front_porch_switch
+
+  - id: morning_porch_off
+    alias: 'Turn the porch light off in the morning'
+    trigger:
+      - platform: sun
+        event: sunrise
+    action:
+      - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
+      - service: switch.turn_off
+        entity_id: switch.front_porch_switch
