--- a/packages/sonoff.yaml
+++ b/packages/sonoff.yaml
@@ -2,6 +2,10 @@ homeassistant:
   customize:
     switch.sonoff1:
       friendly_name: "Sound Soother"
+    switch.sonoff2:
+      friendly_name: "Jason's lamp"
+    switch.sonoff3:
+      friendly_name: "Kim's lamp"
 
 switch:
   - platform: mqtt
