--- a/packages/alexa.yaml
+++ b/packages/alexa.yaml
@@ -20,3 +20,6 @@ alexa:
       switch.xmas_lights_switch:
         name: Xmas lights
         description: Xmas lights outlet (receptacle in guest room)
+      switch.guest_room_lamp:
+        name: Guest room lamp
+        description: Guest room lamp (table lamp in guest room)
