--- a/packages/automation.yaml
+++ b/packages/automation.yaml
@@ -76,7 +76,7 @@ automation:
     action:
       - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_on
-        entity_id: switch.guest_room_lamp
+        entity_id: switch.sonoff4
 
   - id: night_guest_room_off
     hide_entity: True
@@ -87,7 +87,7 @@ automation:
     action:
       - delay: "01:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_off
-        entity_id: switch.guest_room_lamp
+        entity_id: switch.sonoff4
 
   - id: night_porch_on
     hide_entity: True
