--- a/packages/vacation.yaml
+++ b/packages/vacation.yaml
@@ -34,7 +34,7 @@ automation:
     action:
       - delay: "00:{{- ((range(30,45) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_on
-        entity_id: switch.guest_room_lamp
+        entity_id: switch.sonoff4
 
   - id: morning_guest_room_off
     alias: 'Turn the guest room lamp off in the morning'
@@ -49,4 +49,4 @@ automation:
     action:
       - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_off
-        entity_id: switch.guest_room_lamp
+        entity_id: switch.sonoff4
