--- a/groups.yaml
+++ b/groups.yaml
@@ -7,6 +7,13 @@ default_view:
    - group.downstairs
    - group.upstairs
    - group.outside
+   - group.media
+
+media:
+  name: Media
+  entities:
+    - media_player.family_room_chromecast
+    - media_player.family_room_kodi
 
 weather:
   name: Weather
@@ -34,7 +41,7 @@ downstairs:
   entities: 
     - switch.family_room_lamp_switch
     - switch.entry_light_switch
-    - switch.guest_room_lamp
+    - switch.sonoff4
 
 people:
   name: Peeps
