--- a/groups.yaml
+++ b/groups.yaml
@@ -12,7 +12,7 @@ default_view:
 media:
   name: Media
   entities:
-    - media_player.family_room_chromecast
+    - media_player.family_room
     - media_player.family_room_kodi
 
 weather:
