--- a/groups.yaml
+++ b/groups.yaml
@@ -29,6 +29,7 @@ upstairs:
     - switch.sonoff1
     - switch.sonoff2
     - switch.sonoff3
+    - switch.nates_room
 
 outside:
   name: Outside
@@ -39,6 +40,7 @@ outside:
 downstairs:
   name: Downstairs
   entities: 
+    - switch.living_room_lamp
     - switch.family_room_lamp_switch
     - switch.entry_light_switch
     - switch.sonoff4
