added bluetooth device tracking
group my wifi and bluetooth device tracking into a single entity; change push notifications to work
off that entity instead of the individual devices

added vacation condition to a couple of vacation rules that were missing it

--- a/groups.yaml
+++ b/groups.yaml
@@ -48,9 +48,10 @@ downstairs:
 people:
   name: Peeps
   entities:
-    - device_tracker.jason_phone
+    - group.jason
     - device_tracker.kim_phone
     - device_tracker.abby_phone
+
 
 scenes:
   name: Scenes
