--- a/packages/automation.yaml
+++ b/packages/automation.yaml
@@ -18,31 +18,31 @@ automation:
       service: switch.turn_on
       entity_id: switch.entry_light_switch
 
-  - alias: 'Jason home notification'
-    hide_entity: True
-    trigger:
-      platform: state
-      entity_id: group.jason
-      from: 'not_home'
-      to: 'home'
-    action:
-      service: notify.pushbullet
-      data:
-        title: 'Jason is home'
-        message: 'Jason is home'
-
-  - alias: 'Jason away notification'
-    hide_entity: True
-    trigger:
-      platform: state
-      entity_id: group.jason
-      from: 'home'
-      to: 'not_home'
-    action:
-      service: notify.pushbullet
-      data:
-        title: 'Jason is away'
-        message: 'Jason is away'
+#  - alias: 'Jason home notification'
+#    hide_entity: True
+#    trigger:
+#      platform: state
+#      entity_id: group.jason
+#      from: 'not_home'
+#      to: 'home'
+#    action:
+#      service: notify.pushbullet
+#      data:
+#        title: 'Jason is home'
+#        message: 'Jason is home'
+#
+#  - alias: 'Jason away notification'
+#    hide_entity: True
+#    trigger:
+#      platform: state
+#      entity_id: group.jason
+#      from: 'home'
+#      to: 'not_home'
+#    action:
+#      service: notify.pushbullet
+#      data:
+#        title: 'Jason is away'
+#        message: 'Jason is away'
 
   - id: night_dark_theme
     hide_entity: True
