--- a/packages/automation.yaml
+++ b/packages/automation.yaml
@@ -136,3 +136,51 @@ automation:
       - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_off
         entity_id: switch.front_porch_switch
+
+  - id: night_xmas_lights_on
+    hide_entity: True
+    alias: 'Turn the xmas lights on at night'
+    trigger:
+      - platform: sun
+        event: sunset
+    action:
+      - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
+      - service: switch.turn_on
+        entity_id: switch.xmas_lights_switch
+
+  - id: night_xmas_lights_off
+    hide_entity: True
+    alias: 'Turn the xmas lights off at night'
+    trigger:
+      - platform: time
+        at: '23:30:00'
+    action:
+      - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
+      - service: switch.turn_off
+        entity_id: switch.xmas_lights_switch
+
+  - id: morning_xmas_lights_on
+    hide_entity: True
+    alias: 'Turn the xmas lights on in the morning'
+    trigger:
+      - platform: time
+        at: '05:45:00'
+    condition:
+      - condition: state
+        entity_id: sun.sun
+        state: 'below_horizon'
+    action:
+      - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
+      - service: switch.turn_on
+        entity_id: switch.xmas_lights_switch
+
+  - id: morning_xmas_lights_off
+    hide_entity: True
+    alias: 'Turn the xmas lights off in the morning'
+    trigger:
+      - platform: sun
+        event: sunrise
+    action:
+      - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
+      - service: switch.turn_off
+        entity_id: switch.xmas_lights_switch
