--- a/packages/automation.yaml
+++ b/packages/automation.yaml
@@ -184,3 +184,52 @@ automation:
       - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_off
         entity_id: switch.xmas_lights_switch
+
+
+  - id: night_back_porch_on
+    hide_entity: True
+    alias: 'Turn the back porch lamp on at night'
+    trigger:
+      - platform: sun
+        event: sunset
+    action:
+      - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
+      - service: switch.turn_on
+        entity_id: switch.back_porch_lamp
+
+  - id: night_back_porch_off
+    hide_entity: True
+    alias: 'Turn the back porch lamp off at night'
+    trigger:
+      - platform: time
+        at: '23:30:00'
+    action:
+      - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
+      - service: switch.turn_off
+        entity_id: switch.back_porch_lamp
+
+  - id: morning_back_porch_on
+    hide_entity: True
+    alias: 'Turn the back porch lamp on in the morning'
+    trigger:
+      - platform: time
+        at: '05:45:00'
+    condition:
+      - condition: state
+        entity_id: sun.sun
+        state: 'below_horizon'
+    action:
+      - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
+      - service: switch.turn_on
+        entity_id: switch.back_porch_lamp
+
+  - id: morning_back_porch_off
+    hide_entity: True
+    alias: 'Turn the back porch lamp off in the morning'
+    trigger:
+      - platform: sun
+        event: sunrise
+    action:
+      - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
+      - service: switch.turn_off
+        entity_id: switch.back_porch_lamp
