--- a/packages/tuya.yaml
+++ b/packages/tuya.yaml
@@ -1,12 +1,39 @@
 switch:
+#### tuya1
   - platform: tuya
     name: Living Room Lamp
     host: 10.0.1.118
     local_key: 8cad5e456b85a559
     device_id: 05200019ecfabc958e4c
 
+#### tuya2
   - platform: tuya
     name: Sound Soother
     host: 10.0.1.119
     local_key: 1544808ec6cd2534
     device_id: 05200019ecfabc95328d
+
+
+#### TanTan plugs
+
+#### tuya3
+  - platform: tuya
+    name: Back Porch Lamp
+    host: 10.0.1.121
+    local_key: 3a27d2ea6b6a0935
+    device_id: 15764628840d8e5e2584
+
+#### tuya4
+  - platform: tuya
+    name: tuya4
+    host: 10.0.1.122
+    local_key: 56cfb30a60727aa7
+    device_id: 53023030840d8e599414
+
+#### tuya5
+  - platform: tuya
+    name: tuya5
+    host: 10.0.1.123
+    local_key: 6bbdda01b57a01e5
+    device_id: 53023030dc4f22ff65d8
+
