replaced old custom tuya module with tuya_local

--- a/packages/tuya_local.yaml
+++ b/packages/tuya_local.yaml
@@ -1,13 +1,13 @@
 switch:
 #### tuya1
-  - platform: tuya
+  - platform: tuya_local
     name: Living Room Lamp
     host: 10.0.1.118
     local_key: 8cad5e456b85a559
     device_id: 05200019ecfabc958e4c
 
 #### tuya2
-  - platform: tuya
+  - platform: tuya_local
     name: Sound Soother
     host: 10.0.1.119
     local_key: 1544808ec6cd2534
@@ -17,21 +17,21 @@ switch:
 #### TanTan plugs
 
 #### tuya3
-  - platform: tuya
+  - platform: tuya_local
     name: Back Porch Lamp
     host: 10.0.1.121
     local_key: 3a27d2ea6b6a0935
     device_id: 15764628840d8e5e2584
 
 #### tuya4
-  - platform: tuya
+  - platform: tuya_local
     name: tuya4
     host: 10.0.1.122
     local_key: 56cfb30a60727aa7
     device_id: 53023030840d8e599414
 
 #### tuya5
-  - platform: tuya
+  - platform: tuya_local
     name: tuya5
     host: 10.0.1.123
     local_key: 6bbdda01b57a01e5
