--- a/packages/chromecast.yaml
+++ b/packages/chromecast.yaml
@@ -1,4 +1,3 @@
-media_player:
-  - platform: cast
-    name: Family Room Chromecast
-    host: 10.0.1.107
+cast:
+  media_player:
+    - host: 10.0.1.107
