--- a/configuration.yaml
+++ b/configuration.yaml
@@ -23,9 +23,9 @@ config:
 
 http:
   # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
-  base_url: https://priebe-home.duckdns.org:8123
-  ssl_certificate: /home/homeassistant/.homeassistant/certificate.pem
-  ssl_key: /home/homeassistant/.homeassistant/privkey.pem
+  #base_url: https://priebe-home.duckdns.org:8123
+  #ssl_certificate: /home/homeassistant/.homeassistant/certificate.pem
+  #ssl_key: /home/homeassistant/.homeassistant/privkey.pem
 
 # Checks for available updates
 # Note: This component will send some information about your system to
@@ -67,7 +67,6 @@ mqtt:
   password: !secret mqtt_password
 
 scene: !include scenes.yaml
-group: !include groups.yaml
 script: !include scripts.yaml
 
 logger:
@@ -75,3 +74,5 @@ logger:
 
 recorder:
   purge_keep_days: 30
+
+api:
