--- a/packages/vacation.yaml
+++ b/packages/vacation.yaml
@@ -33,7 +33,7 @@ automation:
     action:
       - delay: "00:{{- ((range(30,45) | random) ~ '') -}}:00"
       - service: switch.turn_on
-        entity_id: switch.sonoff4
+        entity_id: switch.guest_room_lamp_switch
 
   - id: morning_guest_room_off
     alias: 'Turn the guest room lamp off in the morning'
@@ -47,7 +47,7 @@ automation:
     action:
       - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_off
-        entity_id: switch.sonoff4
+        entity_id: switch.guest_room_lamp_switch
 
   - id: night_family_room_lamp_on
     alias: 'Turn the family room lamp on at night'
@@ -145,7 +145,7 @@ automation:
     action:
       - delay: "00:{{- ((range(1,30) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_on
-        entity_id: switch.sonoff2
+        entity_id: switch.jasons_lamp_switch
 
   - id: night_jasons_lamp_off
     alias: "Turn Jason's bedroom lamp off at night"
@@ -159,4 +159,4 @@ automation:
     action:
       - delay: "00:{{- ((range(1,30) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_off
-        entity_id: switch.sonoff2
+        entity_id: switch.jasons_lamp_switch
