--- a/scenes.yaml
+++ b/scenes.yaml
@@ -1,11 +1,11 @@
 - name: Bedtime
   entities:
     switch.sound_soother: on
-    switch.sonoff2: off
-    switch.sonoff3: off
+    switch.kims_lamp_switch: off
+    switch.jasons_lamp_switch: off
 
 - name: Morning
   entities:
     switch.sound_soother: off
-    switch.sonoff2: on
-    switch.sonoff3: on
+    switch.kims_lamp_switch: on
+    switch.jasons_lamp_switch: on
